--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </ul>
     </header>
     <main>
+      <!-- section1 -->
       <section>
         <h1>Work at the speed of thought</h1>
         <p>
@@ -36,13 +37,415 @@
           <li><button type="button">Watch the Video</button></li>
         </ul>
         <img
-          src="./images/hero-img.svg"
+          src="./images/section1/hero-img.svg"
           alt="hero-img"
           width="610"
           height="555"
         />
       </section>
+      <!-- section2 -->
+      <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/section2/icon-1.svg"
+              alt="icon-1"
+              width="54"
+              height="54"
+            />
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling,</p>
+          </li>
+          <li>
+            <img
+              src="./images/section2/icon-2.svg"
+              alt="icon-2"
+              width="54"
+              height="54"
+            />
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <img
+              src="./images/section2/icon-3.svg"
+              alt="icon-3"
+              width="54"
+              height="54"
+            />
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+          <li>
+            <img
+              src="./images/section2/icon-4.svg"
+              alt="icon-4"
+              width="54"
+              height="54"
+            />
+            <h3>Five second tests</h3>
+            <p>Personal choices and the overall personality of the person.</p>
+          </li>
+        </ul>
+        <button type="button">sign up now</button>
+      </section>
+      <!-- Management -->
+      <section>
+        <p>Effortless Validation for</p>
+        <h2>Management</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img
+          src="./images/section3/management-img.svg"
+          alt="management"
+          width="540"
+          height="500"
+        />
+      </section>
+      <!-- Custumer Support -->
+      <section>
+        <img
+          src="./images/section4/support-img.svg"
+          alt="support"
+          width="540"
+          height="500"
+        />
+        <p>Easier decision making for</p>
+        <h2>Customer Support</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/section4/icon.svg"
+              alt="icon"
+              width="35"
+              height="35"
+            />
+            <p>Never worry about overpaying for your energy again.</p>
+          </li>
+          <li>
+            <img
+              src="./images/section4/icon1.svg"
+              alt="icon1"
+              width="35"
+              height="35"
+            />
+            <p>
+              We will only switch you to energy companies that we trust and will
+              treat you right
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/section4/icon2.svg"
+              alt="icon2"
+              width="35"
+              height="35"
+            />
+            <p>We track the markets daily and know where the savings are.</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Collaborative -->
+      <section>
+        <p>Optimisation for</p>
+        <h2>Collaborative</h2>
+        <p>
+          Few would argue that, despite the advancements of feminism over the
+          past three decades, women still face a double standard when it comes
+          to their behavior.
+        </p>
+        <ul>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img
+          src="./images/collaboration/collaboration-img.svg"
+          alt="collaboration"
+          width="540"
+          height="500"
+        />
+      </section>
+      <!-- Quick & Easy Process -->
+      <section>
+        <h2>Quick & Easy Process</h2>
+        <p>
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/section5/avatar.png"
+              alt="avatar"
+              width="98"
+              height="98"
+            />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <p>I can take care of your pitch</p>
+            <img
+              src="./images/section5/avatar-1.png"
+              alt="avatar-1"
+              width="98"
+              height="98"
+            />
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p>I can prototype your app</p>
+            <img
+              src="./images/section5/avatar-2.png"
+              alt="avatar-2"
+              width="98"
+              height="98"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/section5/avatar-3.png"
+              alt="avatar-3"
+              width="98"
+              height="98"
+            />
+            <p>I can help marketing strategy</p>
+          </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+      </section>
+      <!-- Contents Strategies -->
+      <section>
+        <h2>Contents Strategies</h2>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/ContentsStrategies/computer.png"
+              alt="computer"
+              width="350"
+              height="150"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img
+              src="./images/ContentsStrategies/window.png"
+              alt="window"
+              width="350"
+              height="150"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img
+              src="./images/ContentsStrategies/city.png"
+              alt="city"
+              width="350"
+              height="150"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+        </ul>
+      </section>
+      <!-- Price Table -->
+      <h2>Price Table</h2>
+      <p>We offer competitive price</p>
+      <ul>
+        <li>
+          <h3>Free</h3>
+          <p>Brief price description</p>
+          <h4>0 &#36; Per / month</h4>
+          <ul>
+            <li>Only 2 Operators</li>
+            <li>Notifications</li>
+            <li>Landing Pages</li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+        <li>
+          <h3>Standard</h3>
+          <p>Brief price description</p>
+          <h4>5 &#36; Per / month</h4>
+          <ul>
+            <li>5+ Operators</li>
+            <li>Notifications</li>
+            <li>Landing Pages</li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+        <li>
+          <h3>Premium</h3>
+          <p>Brief price description</p>
+          <h4>10 &#36; Per / month</h4>
+          <ul>
+            <li>10+ Operators</li>
+            <li>Notifications</li>
+            <li>Landing Pages</li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+      </ul>
+      <!-- What Clients Say -->
+      <section>
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <p>&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/What Clients Say/Ellipse.png"
+              alt="icon1"
+              width="50"
+              height="50"
+            />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/What Clients Say/Ellipse1.png"
+              alt="icon2"
+              width="50"
+              height="50"
+            />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/What Clients Say/Ellipse2.png"
+              alt="icon3"
+              width="50"
+              height="50"
+            />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- join100 -->
+      <section>
+        <h2>Join 100 Compannies who boost their business with Product</h2>
+        <button type="button">Get This</button>
+        <img
+          src="./images/join100/screen.png"
+          alt="screen"
+          width="351"
+          height="331"
+        />
+      </section>
     </main>
-    <footer></footer>
+    <!-- footer -->
+    <footer>
+      <a href="./index.html">
+        <img src="./images/logo.svg" alt="logo" width="40" height="36" />
+        Product
+      </a>
+      <ul>
+        <li>
+          <a href=""
+            ><img
+              src="./images/footer/item-1.png"
+              alt="insta"
+              width="40"
+              height="40"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img
+              src="./images/footer/item-2.png"
+              alt="facebook"
+              width="40"
+              height="40"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img
+              src="./images/footer/item-3.png"
+              alt="twitter"
+              width="40"
+              height="40"
+          /></a>
+        </li>
+      </ul>
+      <a href="">Resource</a>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href=""></a>Blog</li>
+        <li><a href=""></a>Contact</li>
+        <li><a href=""></a>faq</li>
+      </ul>
+      <a href="">Legal Stuff</a>
+      <ul>
+        <li><a href="">Legal Stuff</a></li>
+        <li><a href="">Financing</a></li>
+        <li><a href="">Privacy Policy</a></li>
+      </ul>
+      <p>knowing you're always on the best energy deal.</p>
+
+      <button type="button">Sign up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
